name:                cardano-sl-script-runner
version:             2.0.0
synopsis:            Cardano SL - Script Runner
description:         Cardano SL - ScriptRunner
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:      AutomatedTestRunner
                        Types
                        BrickUI
                        BrickUITypes
                        PocMode
                        NodeControl
  default-language:    Haskell2010
  build-depends:        base
                      , aeson
                      , brick
                      , bytestring
                      , cardano-sl
                      , cardano-sl-chain
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-util
                      , conduit
                      , constraints
                      , containers
                      , data-default
                      , dns
                      , formatting
                      , lens
                      , lifted-async
                      , mtl
                      , optparse-applicative
                      , process
                      , reflection
                      , resourcet
                      , serokell-util
                      , stm
                      , text
                      , time
                      , time-units
                      , universum
                      , unix
                      , unordered-containers
                      , vty
                      , yaml
  ghc-options:         -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2

executable poc
  main-is:              Poc.hs
  other-modules:        BlockParser
  default-language:    Haskell2010
  build-depends:        base
                      , bytestring
                      , universum
                      , cardano-sl-chain
                      , cborg
                      , cardano-sl-script-runner
                      , cardano-sl-infra
                      , turtle
                      , cardano-sl-util
                      , formatting
                      , time-units
                      , data-default
                      , text
                      , constraints
                      , cardano-sl
                      , cardano-sl-db
                      , cardano-sl-core
                      , cardano-sl-binary
  ghc-options:         -threaded -rtsopts
                       -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2
